wsclient/src/main/java/org/hpccsystems/ws/client/antlr/gen/EclRecordParser.java
// Generated from EclRecord.g4 by ANTLR 4.10.1
package org.hpccsystems.ws.client.antlr.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EclRecordParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, OPAREN=16, 
		CPAREN=17, OCURLY=18, CCURLY=19, COMMA=20, SEMI=21, EQ=22, ASSING_SYM=23, 
		REC_SYM=24, END_SYM=25, DATASET_SYM=26, WS=27, INT=28, STRING=29, ATOKEN=30, 
		TOKEN=31, UTOKEN=32, ECL_NUMBERED_TYPE=33;
	public static final int
		RULE_program = 0, RULE_value = 1, RULE_value_list = 2, RULE_token_list = 3, 
		RULE_assign = 4, RULE_assign_list = 5, RULE_eclfield_decl = 6, RULE_eclfield_type = 7, 
		RULE_eclfield_name = 8, RULE_eclfield_recref = 9, RULE_payload_sep = 10, 
		RULE_record_def_inline = 11, RULE_record_def = 12, RULE_defined_record_def = 13, 
		RULE_exploded_dataset_record_def = 14, RULE_inline_dataset_record_def = 15, 
		RULE_record_defs = 16, RULE_nested_dataset_decl = 17, RULE_nested_inline_dataset_decl = 18, 
		RULE_opts = 19, RULE_opt = 20, RULE_maxlength = 21, RULE_blob = 22, RULE_maxcount = 23, 
		RULE_defaultval = 24, RULE_xpath = 25, RULE_xmldefaultval = 26, RULE_annotation_name = 27, 
		RULE_annotation_param = 28, RULE_annotation_arguments = 29, RULE_annotation = 30, 
		RULE_comment = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "value", "value_list", "token_list", "assign", "assign_list", 
			"eclfield_decl", "eclfield_type", "eclfield_name", "eclfield_recref", 
			"payload_sep", "record_def_inline", "record_def", "defined_record_def", 
			"exploded_dataset_record_def", "inline_dataset_record_def", "record_defs", 
			"nested_dataset_decl", "nested_inline_dataset_decl", "opts", "opt", "maxlength", 
			"blob", "maxcount", "defaultval", "xpath", "xmldefaultval", "annotation_name", 
			"annotation_param", "annotation_arguments", "annotation", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'SET OF'", "'set of'", "'MAXLENGTH'", "'maxlength'", "'=>'", "'maxLength'", 
			"'BLOB'", "'blob'", "'MAXCOUNT'", "'DEFAULT'", "'XPATH'", "'XMLDEFAULT'", 
			"'//'", "'/*'", "'*/'", "'('", "')'", "'{'", "'}'", "','", null, "'='", 
			"':='", "'RECORD'", "'END'", "'DATASET'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "OPAREN", "CPAREN", "OCURLY", "CCURLY", "COMMA", 
			"SEMI", "EQ", "ASSING_SYM", "REC_SYM", "END_SYM", "DATASET_SYM", "WS", 
			"INT", "STRING", "ATOKEN", "TOKEN", "UTOKEN", "ECL_NUMBERED_TYPE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "EclRecord.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EclRecordParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<Record_defsContext> record_defs() {
			return getRuleContexts(Record_defsContext.class);
		}
		public Record_defsContext record_defs(int i) {
			return getRuleContext(Record_defsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			record_defs();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OCURLY) | (1L << REC_SYM) | (1L << TOKEN) | (1L << UTOKEN))) != 0)) {
				{
				{
				setState(65);
				record_defs();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode UTOKEN() { return getToken(EclRecordParser.UTOKEN, 0); }
		public TerminalNode TOKEN() { return getToken(EclRecordParser.TOKEN, 0); }
		public TerminalNode INT() { return getToken(EclRecordParser.INT, 0); }
		public TerminalNode STRING() { return getToken(EclRecordParser.STRING, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << TOKEN) | (1L << UTOKEN))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Value_listContext extends ParserRuleContext {
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EclRecordParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EclRecordParser.COMMA, i);
		}
		public Value_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterValue_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitValue_list(this);
		}
	}

	public final Value_listContext value_list() throws RecognitionException {
		Value_listContext _localctx = new Value_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_value_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			value();
			setState(78);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(74);
					match(COMMA);
					setState(75);
					value();
					}
					} 
				}
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Token_listContext extends ParserRuleContext {
		public List<TerminalNode> TOKEN() { return getTokens(EclRecordParser.TOKEN); }
		public TerminalNode TOKEN(int i) {
			return getToken(EclRecordParser.TOKEN, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EclRecordParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EclRecordParser.COMMA, i);
		}
		public Token_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_token_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterToken_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitToken_list(this);
		}
	}

	public final Token_listContext token_list() throws RecognitionException {
		Token_listContext _localctx = new Token_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_token_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(TOKEN);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(82);
				match(COMMA);
				setState(83);
				match(TOKEN);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode EQ() { return getToken(EclRecordParser.EQ, 0); }
		public Value_listContext value_list() {
			return getRuleContext(Value_listContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			value();
			setState(90);
			match(EQ);
			setState(91);
			value_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_listContext extends ParserRuleContext {
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EclRecordParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EclRecordParser.COMMA, i);
		}
		public Assign_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterAssign_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitAssign_list(this);
		}
	}

	public final Assign_listContext assign_list() throws RecognitionException {
		Assign_listContext _localctx = new Assign_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assign_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			assign();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(94);
				match(COMMA);
				setState(95);
				assign();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eclfield_declContext extends ParserRuleContext {
		public Eclfield_typeContext eclfield_type() {
			return getRuleContext(Eclfield_typeContext.class,0);
		}
		public Eclfield_nameContext eclfield_name() {
			return getRuleContext(Eclfield_nameContext.class,0);
		}
		public Nested_dataset_declContext nested_dataset_decl() {
			return getRuleContext(Nested_dataset_declContext.class,0);
		}
		public Nested_inline_dataset_declContext nested_inline_dataset_decl() {
			return getRuleContext(Nested_inline_dataset_declContext.class,0);
		}
		public Eclfield_recrefContext eclfield_recref() {
			return getRuleContext(Eclfield_recrefContext.class,0);
		}
		public Inline_dataset_record_defContext inline_dataset_record_def() {
			return getRuleContext(Inline_dataset_record_defContext.class,0);
		}
		public TerminalNode OCURLY() { return getToken(EclRecordParser.OCURLY, 0); }
		public OptsContext opts() {
			return getRuleContext(OptsContext.class,0);
		}
		public TerminalNode CCURLY() { return getToken(EclRecordParser.CCURLY, 0); }
		public Eclfield_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eclfield_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterEclfield_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitEclfield_decl(this);
		}
	}

	public final Eclfield_declContext eclfield_decl() throws RecognitionException {
		Eclfield_declContext _localctx = new Eclfield_declContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_eclfield_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(101);
				eclfield_type();
				setState(102);
				eclfield_name();
				setState(107);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(103);
					match(OCURLY);
					setState(104);
					opts();
					setState(105);
					match(CCURLY);
					}
					break;
				}
				}
				break;
			case 2:
				{
				setState(109);
				nested_dataset_decl();
				}
				break;
			case 3:
				{
				setState(110);
				nested_inline_dataset_decl();
				}
				break;
			case 4:
				{
				{
				setState(111);
				inline_dataset_record_def();
				setState(112);
				eclfield_name();
				}
				}
				break;
			case 5:
				{
				setState(114);
				eclfield_recref();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eclfield_typeContext extends ParserRuleContext {
		public TerminalNode UTOKEN() { return getToken(EclRecordParser.UTOKEN, 0); }
		public TerminalNode TOKEN() { return getToken(EclRecordParser.TOKEN, 0); }
		public Eclfield_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eclfield_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterEclfield_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitEclfield_type(this);
		}
	}

	public final Eclfield_typeContext eclfield_type() throws RecognitionException {
		Eclfield_typeContext _localctx = new Eclfield_typeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_eclfield_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0 || _la==T__1) {
				{
				setState(117);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==T__1) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(120);
			_la = _input.LA(1);
			if ( !(_la==TOKEN || _la==UTOKEN) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eclfield_nameContext extends ParserRuleContext {
		public TerminalNode UTOKEN() { return getToken(EclRecordParser.UTOKEN, 0); }
		public TerminalNode TOKEN() { return getToken(EclRecordParser.TOKEN, 0); }
		public Eclfield_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eclfield_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterEclfield_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitEclfield_name(this);
		}
	}

	public final Eclfield_nameContext eclfield_name() throws RecognitionException {
		Eclfield_nameContext _localctx = new Eclfield_nameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_eclfield_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << TOKEN) | (1L << UTOKEN))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eclfield_recrefContext extends ParserRuleContext {
		public TerminalNode OPAREN() { return getToken(EclRecordParser.OPAREN, 0); }
		public TerminalNode TOKEN() { return getToken(EclRecordParser.TOKEN, 0); }
		public TerminalNode CPAREN() { return getToken(EclRecordParser.CPAREN, 0); }
		public Eclfield_recrefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eclfield_recref; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterEclfield_recref(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitEclfield_recref(this);
		}
	}

	public final Eclfield_recrefContext eclfield_recref() throws RecognitionException {
		Eclfield_recrefContext _localctx = new Eclfield_recrefContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_eclfield_recref);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(OPAREN);
			setState(125);
			match(TOKEN);
			setState(126);
			match(CPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Payload_sepContext extends ParserRuleContext {
		public Payload_sepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_payload_sep; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterPayload_sep(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitPayload_sep(this);
		}
	}

	public final Payload_sepContext payload_sep() throws RecognitionException {
		Payload_sepContext _localctx = new Payload_sepContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_payload_sep);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Record_def_inlineContext extends ParserRuleContext {
		public TerminalNode OCURLY() { return getToken(EclRecordParser.OCURLY, 0); }
		public List<Eclfield_declContext> eclfield_decl() {
			return getRuleContexts(Eclfield_declContext.class);
		}
		public Eclfield_declContext eclfield_decl(int i) {
			return getRuleContext(Eclfield_declContext.class,i);
		}
		public TerminalNode CCURLY() { return getToken(EclRecordParser.CCURLY, 0); }
		public TerminalNode SEMI() { return getToken(EclRecordParser.SEMI, 0); }
		public List<TerminalNode> COMMA() { return getTokens(EclRecordParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EclRecordParser.COMMA, i);
		}
		public MaxlengthContext maxlength() {
			return getRuleContext(MaxlengthContext.class,0);
		}
		public Record_def_inlineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_record_def_inline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterRecord_def_inline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitRecord_def_inline(this);
		}
	}

	public final Record_def_inlineContext record_def_inline() throws RecognitionException {
		Record_def_inlineContext _localctx = new Record_def_inlineContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_record_def_inline);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(OCURLY);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(131);
				match(COMMA);
				setState(132);
				maxlength();
				}
			}

			setState(135);
			eclfield_decl();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << OPAREN) | (1L << OCURLY) | (1L << COMMA) | (1L << DATASET_SYM) | (1L << TOKEN) | (1L << UTOKEN))) != 0)) {
				{
				{
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(136);
					match(COMMA);
					}
					}
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(142);
				eclfield_decl();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			match(CCURLY);
			setState(149);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Record_defContext extends ParserRuleContext {
		public TerminalNode REC_SYM() { return getToken(EclRecordParser.REC_SYM, 0); }
		public List<Eclfield_declContext> eclfield_decl() {
			return getRuleContexts(Eclfield_declContext.class);
		}
		public Eclfield_declContext eclfield_decl(int i) {
			return getRuleContext(Eclfield_declContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(EclRecordParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(EclRecordParser.SEMI, i);
		}
		public TerminalNode END_SYM() { return getToken(EclRecordParser.END_SYM, 0); }
		public TerminalNode COMMA() { return getToken(EclRecordParser.COMMA, 0); }
		public MaxlengthContext maxlength() {
			return getRuleContext(MaxlengthContext.class,0);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public Record_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_record_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterRecord_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitRecord_def(this);
		}
	}

	public final Record_defContext record_def() throws RecognitionException {
		Record_defContext _localctx = new Record_defContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_record_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(REC_SYM);
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(152);
				match(COMMA);
				setState(153);
				maxlength();
				}
			}

			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12 || _la==T__13) {
				{
				setState(156);
				comment();
				}
			}

			setState(159);
